--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,6 +9,7 @@ cloud:
   config:
     server:
       git:
-        uri: https://github.com/nataliehelm/spring-cloud-config
-        default-label: main   //brach en github
+        uri: https://github.com/nataliehelm/spring-cloud-examen
+        default-label: main
         force-pull: true
+        search-paths: service-configuration
