--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -55,6 +55,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
