--- a/service-configuration/eureka-server.yml
+++ b/service-configuration/eureka-server.yml
@@ -7,6 +7,7 @@ spring:
 eureka:
   instance:
     hostname: localhost
+    instance-id: ${spring.application.name}:${random.int}
   client:
     registerWithEureka: false
     fetchRegistry: false
