--- a/service-configuration/eureka-server.yml
+++ b/service-configuration/eureka-server.yml
@@ -7,7 +7,8 @@ spring:
 eureka:
   instance:
     hostname: localhost
-    instance-id: ${spring.application.name}:${random.int}
+    instance:
+    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     registerWithEureka: false
     fetchRegistry: false
