--- a/service-configuration/movie-service.yml
+++ b/service-configuration/movie-service.yml
@@ -4,6 +4,18 @@ server:
 spring:
   application:
     name: movie-service
+    
+eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    
+ client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+      
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
