--- a/service-configuration/catalog-service.yml
+++ b/service-configuration/catalog-service.yml
@@ -4,6 +4,16 @@ server:
 spring:
   application:
     name: catalog-service
+ eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    
+ client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
