Editing gateway config

--- a/service-configuration/gateway.yml
+++ b/service-configuration/gateway.yml
@@ -6,6 +6,8 @@ spring:
     name: gateway
   cloud:
     gateway:
+      loadbalancer:
+        name: RandomLoadBalancer
       discovery:
         locator:
           enabled: true
