--- a/service-configuration/serie-service.yml
+++ b/service-configuration/serie-service.yml
@@ -11,6 +11,16 @@ spring:
     mongodb:
       database: test
       port: 27017
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+
+queue:
+  serie:
+    name: NewSerie
+
 eureka:
   instance:
     hostname: localhost
