--- a/service-configuration/movie-service.yml
+++ b/service-configuration/movie-service.yml
@@ -13,7 +13,15 @@ spring:
       hibernate.ddl-auto: update
       generate-ddl: true
       show-sql: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
 
+queue:
+  movie:
+    name: NewMovie
     
 eureka:
   instance:
