--- a/service-configuration/catalog-service.yml
+++ b/service-configuration/catalog-service.yml
@@ -5,6 +5,16 @@ spring:
   application:
     name: catalog-service
 
+  mongodb:
+    embedded:
+      version: 4.0.2
+  data:
+    mongodb:
+      database: test
+      port: 27017
+queue:
+  catalog:
+    name: Catalog
 eureka:
   instance:
     hostname: localhost
