editing catalog config

--- a/service-configuration/catalog-service.yml
+++ b/service-configuration/catalog-service.yml
@@ -13,6 +13,12 @@ spring:
       database: catalogo
       port: 27018
 
+queue:
+  movie:
+    name: NewMovie
+  serie:
+    name: NewSerie
+
 eureka:
   instance:
     hostname: localhost
