--- a/service-configuration/catalog-service.yml
+++ b/service-configuration/catalog-service.yml
@@ -36,4 +36,29 @@ management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: circuitbreakers,circuitbreakerevents,health,info,ratelimiters,metrics
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoint:
+    health:
+      show-details: always
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      series:
+        allowHealthIndicatorToFail: false
+        registerHealthIndicator: true
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 15000
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled : true
+    retry:
+      instances:
+        series:
+          maxAttempts: 3
+          waitDuration: 1000
+          retryExceptions[0]: feign.FeignException$InternalServerError
