--- a/service-configuration/gateway.yml
+++ b/service-configuration/gateway.yml
@@ -14,7 +14,15 @@ spring:
           uri: lb://catalog-service
           predicates:
             - Path=/catalog/**
-
+        - id: movie-service
+          uri: lb://movie-service
+          predicates:
+            - Path=/movies/**
+        - id: serie-service
+          uri: lb://serie-service
+          predicates:
+            - Path=/series/**
+            -
 info:
   app:
     name: ${spring.application.name}
